[project]
name = "qc-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "scipy>=1.16.1",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E"]
ignore = ["E741"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[dependency-groups]
dev = [
    "scipy-stubs>=1.16.1.0",
    "ruff>=0.12.7",
]
